--- a/post.html
+++ b/post.html
@@ -117,7 +117,7 @@
         <div class="container py-4 my-5">
             <div class="row justify-content-between">
                 <div class="col-lg-10">
-                    <h1 class="text-white add-letter-space mt-4">[[contenttitle]]</h1>
+                    <h1 class="text-white add-letter-space mt-4">[[title]]</h1>
                     <ul class="post-meta mt-3 mb-4">
                         <li class="d-inline-block mr-3">
                             <span class="fas fa-clock text-primary"></span>
